# clickadvisor

./: .dockerignore  .gitattributes  .gitignore  .railwayignore  AGENTS.md  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  requirements-mcp.txt
.github/workflows/: ci.yml  refresh-kb.yml
benchmark/: README.md  SCHEMA.yaml  TEMPLATE.yaml
benchmark/cases/: README.md
benchmark/schemas/: tpch.sql
benchmark/splits/: synthetic_expanded_v1.yaml
clickadvisor/: __init__.py  __main__.py
clickadvisor/cli/: __init__.py  app.py  main.py  output.py
clickadvisor/core/: __init__.py  models.py  pipeline.py  sql_parser.py  version.py
clickadvisor/explain/: __init__.py  comparator.py  estimator.py  parser.py
clickadvisor/llm/: __init__.py
clickadvisor/mcp_server/: __init__.py  __main__.py  server.py
clickadvisor/ml/: __init__.py  classifier.py  dataset.py  features.py
clickadvisor/retrieval/: __init__.py  advisory.py  embedder.py  indexer.py  retriever.py
clickadvisor/rules/: __init__.py  base.py  environment.py  registry.py  tier2.py
data/kb/: README.md
docs/: ARCHITECTURE.md  GLOSSARY.md  MCP.md  ai-mcp-workflow.md  evaluation.md  io-spec.md  mcp-deployment.md  project-readiness.en.md  project-readiness.md  security-local-first.md  workload.md
examples/: bad_query.sql  query_log_sample.csv
tests/: test_chunker.py  test_environment_cli.py  test_generate_synthetic_dataset.py  test_mcp_server.py  test_smoke.py  test_validate_benchmark_cases.py  test_validate_catalog.py  test_validator.py
(+12890 files in other folders)
