[tool.poetry]
name = "clickadvisor"
version = "1.0.0"
description = "Local-first CLI for ClickHouse query optimization with formally grounded rewrite rules."
authors = ["OpenAI Codex <codex@openai.com>"]
readme = "README.md"
packages = [{ include = "clickadvisor" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
anthropic = "^0.54.0"
beautifulsoup4 = "^4.12.3"
catboost = "^1.2.8"
flagembedding = "^1.3.5"
markdownify = "^0.13.1"
jsonschema = "^4.25.0"
ollama = "^0.5.1"
pyyaml = "^6.0.2"
qdrant-client = ">=1.9.0"
rich = "^14.0.0"
requests = "^2.32.3"
sentence-transformers = ">=2.7.0"
sqlglot = "^26.20.0"
testcontainers = "^4.10.0"
typer = "^0.16.0"
httpx = "^0.27.0"
xmltodict = "^0.14.2"
mcp = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.135.0"
mypy = "^1.16.0"
pytest = "^8.3.5"
ruff = "^0.11.13"
pytest-asyncio = "^1.4.0"

[tool.poetry.scripts]
clickadvisor = "clickadvisor.cli.main:app"
chadvisor = "clickadvisor.cli.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP007"]

[tool.mypy]
python_version = "3.11"
packages = ["clickadvisor"]
strict = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
